git-repair (1.20161111) unstable; urgency=medium

  * git-repair.cabal: Add Setup-Depends.
  * Updated cabal file explictly lists source files. The tarball
    on hackage will include only the files needed for cabal install;
    it is NOT the full git-repair source tree.
  * debian/changelog: Converted to symlinks to CHANGELOG.
  * Merge from git-annex.

 -- Joey Hess <id@joeyh.name>  Fri, 11 Nov 2016 14:56:14 -0400

git-repair (1.20151215) unstable; urgency=medium

  * Fix insecure temporary permissions and potential denial of
    service attack when creating temp dirs. Closes: #807341
  * Merge from git-annex.

 -- Joey Hess <id@joeyh.name>  Tue, 15 Dec 2015 20:47:59 -0400

git-repair (1.20150106) unstable; urgency=medium

  * Debian package is now maintained by Richard Hartmann.
  * Fix build with process 1.2.1.0.
  * Merge from git-annex.

 -- Joey Hess <id@joeyh.name>  Tue, 06 Jan 2015 19:09:23 -0400

git-repair (1.20141027) unstable; urgency=medium

  * Adjust cabal file to support network-uri split.
  * Merge Build/ from git-annex, including removing a use of deprecated
    System.Cmd.

 -- Joey Hess <joeyh@debian.org>  Mon, 27 Oct 2014 11:09:56 -0400

git-repair (1.20141026) unstable; urgency=medium

  * Prevent auto gc from happening when fetching from a remote.
  * Merge from git-annex.

 -- Joey Hess <joeyh@debian.org>  Sun, 26 Oct 2014 13:37:30 -0400

git-repair (1.20140914) unstable; urgency=medium

  * Update to build with optparse-applicative 0.10. Closes: #761552

 -- Joey Hess <joeyh@debian.org>  Sun, 14 Sep 2014 12:48:27 -0400

git-repair (1.20140815) unstable; urgency=medium

  * Removing bad objects could leave fsck finding no more unreachable objects,
    but some branches no longer accessible. Fix this, including support for
    fixing up repositories that were incompletely repaired before.
  * Merge from git-annex.

 -- Joey Hess <joeyh@debian.org>  Fri, 15 Aug 2014 13:49:09 -0400

git-repair (1.20140423) unstable; urgency=medium
