@@ -6,6 +6,8 @@ git-repair (1.20161111) unstable; urgency=medium
     it is NOT the full git-repair source tree.
   * debian/changelog: Converted to symlinks to CHANGELOG.
   * Merge from git-annex.
+  * Makefile: Support building with stack as well as cabal.
+  * Makefile: The CABAL variable has been renamed to BUILDER.
 
  -- Joey Hess <id@joeyh.name>  Fri, 11 Nov 2016 14:56:14 -0400
 
